Course 01 Week 04, passed 3/6

--- a/course1-algorithmic-toolbox/week4_divide_and_conquer/.vscode/settings.json
+++ b/course1-algorithmic-toolbox/week4_divide_and_conquer/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "algorithm": "cpp",
         "iterator": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "utility": "cpp"
     }
 }
